# quantdatasource

./: .gitignore  README.md  account.py  docker-compose.yml  jobs.py  pyproject.toml  quantdata_config.yml  quantdatasource_config.yml  requirements.txt
docs/: astock.md  astock_daily.md  astock_ticks.md  ctp_future.md  ctp_future_ticks.md  future.md  tushare数据缺陷.txt  期货不活跃品种.txt
etc/tdengine/: taos.cfg
quantdatasource/: __init__.py  __main__.py  scheduler.py
quantdatasource/api/: __init__.py  ctp.py  eastmoney.py  ths.py  tqsdk.py  tqsdk_utils.py  tushare.py  utils.py
quantdatasource/dbimport/ctp/: contracts.py
quantdatasource/dbimport/duckdb/: __init__.py
quantdatasource/dbimport/eastmoney/: analyst_reports.py
quantdatasource/dbimport/mongodb/: __init__.py
quantdatasource/dbimport/tdengine/: __init__.py
quantdatasource/dbimport/ths/: hot_stocks.py
quantdatasource/dbimport/tqsdk/: adjust_factors.py  future_basic.py  (+1 more)
quantdatasource/jobs/: __init__.py  __main__.py  account.py  calendar.py  config.py  ctp_download_contracts.py  data_saver.py  eastmoney_analyst_reports.py  msg_email.py  scheduler.py  ths_hot_stocks.py  tqsdk_calc_adj_factors.py  tqsdk_future_bars.py  tqsdk_future_basic.py  tushare_cb_daily.py  tushare_cb_data.py  tushare_index_bars.py  tushare_misc_data.py
sqls/duckdb/: astock_bars.sql  astock_bars_cb_daily.sql  astock_bars_daily.sql  astock_bars_ths_index_daily.sql  astock_market_stats.sql  astock_ticks.sql  ctpfuture_tick_bars.sql  ctpfuture_ticks.sql
sqls/tdengine/: database.sql  database_ticks_ctpfuture.sql  get_null_moneyflow.sql
(+13 files in other folders)
